Implemented a transfer import command handler that imports a file from a given URL and commits it.